# nih-plug

./: Cargo.toml
nih_plug_egui/: Cargo.toml
nih_plug_egui/src/: editor.rs  lib.rs  resizable_window.rs
